refac(doc): #3423.8 fix-meta-descriptions-keywords
- Descriptions were shortened, and keywords were added on some pages.


Former-commit-id: 4fcde5069ab52b7ce4b4cc863d0785723832690f

--- a/content/pages/rules/credentials/127/index.adoc
+++ b/content/pages/rules/credentials/127/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/127/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining cryptographic mechanisms to store passwords securely and avoid common attacks.
-:keywords: Passwords, Hash, Algorithms, ASVS, CWE, NIST
+:description: This requirement establishes the importance of defining cryptographic mechanisms to store passwords securely and avoid common attacks.
+:keywords: Passwords, Hash, Algorithms, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R127. Store hashed passwords
