--- a/content/pages/rules/credentials/128/index.adoc
+++ b/content/pages/rules/credentials/128/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/128/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining an unique data source to store securely all syste passwords
-:keywords: Requirement, Security, Passwords, Storing, Data, Source
+:description: This requirement establishes the importance of defining a unique data source to store all system passwords securely.
+:keywords: Requirement, Security, Passwords, Storing, Data, Source, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R128. Define unique data source
@@ -9,7 +9,7 @@
 == Requirement
 
 All system passwords must be stored
-in an unique data source.
+in a unique data source.
 
 == References
 
