--- a/content/pages/rules/credentials/129/index.adoc
+++ b/content/pages/rules/credentials/129/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/129/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of user credentials in the organization. This requirement establishes the importance of validating passwords changes to ensure that the new passwords do not match previous user passwords.
-:keywords: System, Requirement, Password, Update, Validation, Security.
+:description: This requirement establishes the importance of validating passwords changes to ensure that the new passwords do not match previous user passwords.
+:keywords: System, Requirement, Password, Update, Validation, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R129. Validate previous passwords
