--- a/content/pages/rules/credentials/131/index.adoc
+++ b/content/pages/rules/credentials/131/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/131/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of managing password change mechanisms to avoid multiple password changes in less than 24 hours.
-:keywords: Requirement, Security, Passwords, Changing, Attempts, Credentials
+:description: This requirement establishes the importance of managing password change mechanisms to avoid multiple password changes in less than 24 hours.
+:keywords: Requirement, Security, Passwords, Changing, Attempts, Credentials, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R131. Deny multiple password changing attempts
