--- a/content/pages/rules/credentials/132/index.adoc
+++ b/content/pages/rules/credentials/132/index.adoc
@@ -1,15 +1,15 @@
 :slug: rules/132/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining passphrases with at least 4 words and allowing them to be more than 64 characters long.
-:keywords: Password, Length, Passphrase, ASVS, CWE, NIST
+:description: This requirement establishes the importance of defining passphrases with at least 4 words and allowing them to be more than 64 characters long.
+:keywords: Password, Length, Passphrase, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R132. Passphrases with at least 4 words
 
 == Requirement
 
-The system must require passphrases to be at least 4 words long and allow them
-to have 64 characters or more .
+The system must require passphrases to be at least 4 words long
+and allow them to have 64 characters or more.
 
 == Description
 
