--- a/content/pages/rules/credentials/133/index.adoc
+++ b/content/pages/rules/credentials/133/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/133/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining secure passwords with a length of at least 20 characters.
-:keywords: Credentials, Access, Password, Length, CWE, ASVS
+:description: This requirement establishes the importance of defining secure passwords with a length of at least 20 characters.
+:keywords: Credentials, Access, Password, Length, CWE, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R133. Passwords with at least 20 characters
