--- a/content/pages/rules/credentials/134/index.adoc
+++ b/content/pages/rules/credentials/134/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/134/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of storing passwords securely using cryptographic functions to mask their content.
-:keywords: Passwords, Hash, Salt, ASVS, CWE, NIST
+:description: This requirement establishes the importance of storing passwords securely using cryptographic functions to mask their content.
+:keywords: Passwords, Hash, Salt, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R134. Store passwords with salt
