--- a/content/pages/rules/credentials/135/index.adoc
+++ b/content/pages/rules/credentials/135/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/135/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of setting random values and minimum length to key derivations (salt) in passwords.
-:keywords: Password, Salt, Random, ASVS, CWE, NIST
+:description: This requirement establishes the importance of setting random values and a minimum length for key derivations (salt) in passwords.
+:keywords: Password, Salt, Random, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R135. Passwords with random salt
