--- a/content/pages/rules/credentials/139/index.adoc
+++ b/content/pages/rules/credentials/139/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/139/
 :category: credentials
-:description: This document details the security requirements related to credentials for access to sensitive information of the organization. This requirement is related to the importance of defining the minimum length for one-time passwords within the company's system.
-:keywords: Length, Password, OTP, ASVS, CWE, NIST
+:description: This requirement is related to the importance of defining the minimum length for one-time passwords within the company's system.
+:keywords: Length, Password, OTP, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R139. Set minimum OTP length
