--- a/content/pages/rules/credentials/140/index.adoc
+++ b/content/pages/rules/credentials/140/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/140/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining a short lifespan for single use passwords such as access tokens and OTPs.
-:keywords: Password, Lifespan, OTP, ASVS, CWE, NIST
+:description: This requirement establishes the importance of defining a short lifespan for single-use passwords such as access tokens and OTPs.
+:keywords: Password, Lifespan, OTP, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R140. Define OTP lifespan
