--- a/content/pages/rules/authorization/114/index.adoc
+++ b/content/pages/rules/authorization/114/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/114/
 :category: authorization
-:description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of properly managing inactive users and credentials in the system in order to avoid security breaches.
-:keywords: Requirement, Security, Credentials, Inactive Users, Access, Information
+:description: This requirement establishes the importance of adequately managing inactive users and credentials in the system to avoid security breaches.
+:keywords: Requirement, Security, Credentials, Inactive Users, Access, Information, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R114. Deny access with inactive credentials
