--- a/content/pages/rules/credentials/126/index.adoc
+++ b/content/pages/rules/credentials/126/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/126/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining a mechanism to securely regenerate user passwords.
-:keywords: Passwords, Retrieve, Restore, Credentials, ASVS, CWE
+:description: This requirement establishes the importance of defining a mechanism to regenerate user passwords securely.
+:keywords: Passwords, Retrieve, Restore, Credentials, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R126. Set a password regeneration mechanism
