--- a/content/pages/rules/credentials/130/index.adoc
+++ b/content/pages/rules/credentials/130/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/130/
 :category: credentials
-:description: This document details the security requirements related to credentials for access to sensitive information of the organization. In this requirement, it is recommended that the system does not allow its passwords to have a lifespan of more than 30 days.
-:keywords: Password, Validity, Security, Expiration, Limit, CWE
+:description: This requirement establishes that the system must not allow its passwords to have a lifespan of more than 30 days.
+:keywords: Password, Validity, Security, Expiration, Limit, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R130. Limit password lifespan
