--- a/content/pages/rules/credentials/136/index.adoc
+++ b/content/pages/rules/credentials/136/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/136/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining mechanisms to force users to change temporary passwords after their first use.
-:keywords: Force, Temporary Passwords, Change, ASVS, CWE, NIST
+:description: This requirement establishes the importance of defining mechanisms to force users to change temporary passwords after their first use.
+:keywords: Force, Temporary Passwords, Change, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R136. Force temporary password changing
