--- a/content/pages/rules/credentials/138/index.adoc
+++ b/content/pages/rules/credentials/138/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/138/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining a limited lifespan for temporary password in first system login.
-:keywords: Temporary, Password, Lifespan, Login, ASVS, CWE
+:description: This requirement establishes the importance of defining a limited lifespan for temporary passwords for the first system login.
+:keywords: Temporary, Password, Lifespan, Login, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R138. Define lifespan for temporary passwords
