--- a/content/pages/rules/emails/118/index.adoc
+++ b/content/pages/rules/emails/118/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/118/
 :category: emails
-:description: This document details the security guidelines and requirements related to the administration of emails in companies and organizations. This requirement strongly recommends that email attachments be inspected employing anti-malware software in order to avoid virus propagation.
-:keywords: Files, Email, Attachment, Malware, Analyze, Tool
+:description: This requirement establishes that email attachments must be inspected employing anti-malware software to avoid virus propagation.
+:keywords: Files, Email, Attachment, Malware, Analyze, Tool, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R118. Inspect attachments
