--- a/content/pages/rules/emails/119/index.adoc
+++ b/content/pages/rules/emails/119/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/119/
 :category: emails
-:description: This document details the security guidelines and requirements related to the administration of emails in companies and organizations. This requirement establishes the importance of hiding the recipients when sending bulk emails in order to avoid business information disclosure.
-:keywords: BCC, Mails, Recipient, Information, Disclosure, Bulk
+:description: This requirement establishes the importance of hiding the recipients when sending bulk emails to avoid business information disclosure.
+:keywords: BCC, Mails, Recipient, Information, Disclosure, Bulk, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R119. Hide recipients
