--- a/content/pages/rules/emails/122/index.adoc
+++ b/content/pages/rules/emails/122/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/122/
 :category: emails
-:description: This document details the security guidelines and requirements related to the administration of emails in companies and organizations. This requirement strongly recommends validating that the indicated email account actually belongs to the user claiming it.
-:keywords: Person, Email, Guarantee, Owner, Security, Electronic
+:description: This requirement establishes the importance of validating that the indicated email account belongs to the user claiming it.
+:keywords: Person, Email, Guarantee, Owner, Security, Electronic, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R122. Validate email ownership
