refac(doc): #3443 resources-update-link-rules
- The link to Rules on Resources has been updated.


Former-commit-id: 0b815a726f9c0b74f8637c827be523ec061bc23b

--- a/new/content/pages/resources/index.adoc
+++ b/new/content/pages/resources/index.adoc
@@ -4,7 +4,7 @@
 
 = Resources
 
-== link:../rules/[Rules]
+== link:../products/rules/[Rules]
 
 *Rules* is a set of security requirements
 that allows you to parameterize a pentest
