--- a/content/pages/rules/credentials/333/index.adoc
+++ b/content/pages/rules/credentials/333/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/333/
 :category: credentials
-:description: This documents contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of storing the salt values used in the hashing process separately from hashed passwords.
+:description: This requirement establishes the importance of storing the salt values used in the hashing process separately from hashed passwords.
 :keywords: Salt, Store, Separately, ASVS, CWE, NIST
 :rules: yes
 
@@ -35,3 +35,8 @@ secrets (e.g., in a specialized device like a hardware security module).
 V2.4 Credential Storage Requirements.(2.4.5)]
 The secret salt value SHALL be stored separately from the hashed passwords
 (e.g., in a specialized device like a hardware security module).
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.4 Secret Management.(6.4.2)]
+Verify that key material is not exposed to the application but instead uses an
+isolated security module like a vault for cryptographic operations.
