--- a/content/pages/rules/source/156/index.adoc
+++ b/content/pages/rules/source/156/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/156/
 :category: source
-:description: This documents contains the details of the security requirements related to source code security in applications. This requirement establishes the importance of developing source code without sensitive information in order to avoid security breaches in the application.
+:description: This requirement establishes the importance of excluding sensitive information from the source code.
 :keywords: Source Code, Sensitive information, Data, ASVS, CWE, GDPR
 :rules: yes
 
@@ -89,3 +89,13 @@ V2.10 Service Authentication Requirements.(2.10.4)]
 Verify passwords, integrations with databases and third-party systems, seeds
 and internal secrets, and API keys are managed securely and not included in the
 source code or stored within source code repositories.
+
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.4 Secret Management.(6.4.1)]
+Verify that a secrets management solution such as a key vault is used to
+securely create, store, control access to and destroy secrets.
+
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.4 Secret Management.(6.4.2)]
+Verify that key material is not exposed to the application but instead uses an
+isolated security module like a vault for cryptographic operations.
