refac(doc): #3423.9 fix-meta-descriptions-keywords
- Descriptions were shortened, and keywords were added on some pages.


Former-commit-id: 15c7ad17dd56f65e47bc404cb2ff01c14b287f04

--- a/content/pages/rules/credentials/141/index.adoc
+++ b/content/pages/rules/credentials/141/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/141/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of forcing users to re-authenticate after a password change occurs.
-:keywords: Re-authentication, Force, Password, Change, ASVS, CWE
+:description: This requirement establishes the importance of forcing users to re-authenticate after a password change occurs.
+:keywords: Re-authentication, Force, Password, Change, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R141. Force re-authentication
