--- a/content/pages/rules/credentials/143/index.adoc
+++ b/content/pages/rules/credentials/143/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/143/
 :category: credentials
-:description: This document contains the details of the security requirements related to definition and management of user access credentials. User credentials must be unique for each actor that claims access to the system and the health information there contained, in order to ease identity tracking.
-:keywords: Requirement, Security, System, Credentials, Access, Actor
+:description: This requirement establishes that user credentials must be unique for each actor that claims access to the system.
+:keywords: Requirement, Security, System, Credentials, Access, Actor, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R143. Unique access credentials
