--- a/content/pages/rules/credentials/144/index.adoc
+++ b/content/pages/rules/credentials/144/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/144/
 :category: credentials
-:description: This documents contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of purging user accounts periodically in order to avoid information leakages.
-:keywords: Requirement, Security, Credentials, User, Account, Purge
+:description: This requirement establishes the importance of purging user accounts periodically in order to avoid information leakages.
+:keywords: Requirement, Security, Credentials, User, Account, Purge, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R144. Purge accounts periodically
