--- a/content/pages/rules/authentication/153/index.adoc
+++ b/content/pages/rules/authentication/153/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/153/
 :category: authentication
-:description: This document details the security requirements and guidelines related to the authentication process performed in the applications. This requirement establishes the importance of offering secure out of band authenticators, such as push notifications, as a secondary authentication factor.
-:keywords: Out-of-band, Transaction, Band, Push notification, ASVS, CWE
+:description: This requirement establishes the importance of offering secure out of band authenticators, such as push notifications, as secondary authentication factors.
+:keywords: Out-of-band, Transaction, Band, Push notification, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R153. Out of band transactions
