--- a/content/pages/rules/credentials/142/index.adoc
+++ b/content/pages/rules/credentials/142/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/142/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of modifying all default credentials in the system in order to avoid brute force attacks.
-:keywords: Change, Credentials, Default, Password, System, ASVS
+:description: This requirement establishes the importance of modifying all default credentials in the system in order to avoid brute force attacks.
+:keywords: Change, Credentials, Default, Password, System, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R142. Change system default credentials
