--- a/content/pages/rules/cryptography/145/index.adoc
+++ b/content/pages/rules/cryptography/145/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/145/
 :category: cryptography
 :description: This requirement establishes the importance of protecting system cryptographic keys.
-:keywords: Asymmetric, Symmetric, Cryptography, Keys, ASVS, CWE
+:keywords: Asymmetric, Symmetric, Cryptography, Keys, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R145. Protect system cryptographic keys
