--- a/content/pages/rules/cryptography/150/index.adoc
+++ b/content/pages/rules/cryptography/150/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/150/
 :category: cryptography
-:description: This document contains the details of the security requirements related to the definition and management of cryptographic systems. This requirement establishes the importance of protecting encrypted sensitive information by setting a minimum size for all hash functions in the system.
-:keywords: Security, Hash, Function, Size, Cryptography, ASVS
+:description: This requirement establishes the importance of protecting encrypted sensitive information by setting a minimum size for all hash functions.
+:keywords: Security, Hash, Function, Size, Cryptography, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R150. Set minimum size for hash functions
