--- a/content/pages/rules/source/152/index.adoc
+++ b/content/pages/rules/source/152/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/152/
 :category: source
-:description: This document details the security requirements related to the manipulation of code sentences, whose purpose is to make connections to system databases, focusing on their reuse and avoiding possible vulnerabilities or overloading the application with code.
-:keywords: Requirement, Security, Connection, Database, Reuse, Vulnerability
+:description: This requirement establishes that the system must reuse database connections.
+:keywords: Requirement, Security, Connection, Database, Reuse, Vulnerability, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R152. Reuse database connections
